--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,4 @@ copyright_holder = Companies House
 copyright_year   = 2014
  
 [@CHGOVUK]
-
-[Prereqs]
-Mojolicious = 0
+prereqs = Prereqs::FromCPANfile
